log/build_2023-05-07_19-17-02/PSO_pkg/stderr.log
  File "/home/vboxuser/PSO_final/install/PSO_pkg/lib/python3.8/site-packages/PSO_pkg/Agg.py", line 26
    global flag = 0
                ^
SyntaxError: invalid syntax

